Kubernets-Docker-Configs/kafka-connect/kafka-connect.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect
  namespace: kanban
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-connect
  template:
    metadata:
      labels:
        app: kafka-connect
    spec:
      containers:
      - name: kafka-connect
        image: confluentinc/cp-kafka-connect:7.5.4
        ports:
        - containerPort: 8083
        command:
        - bash
        - -c
        - |
          echo "Installing JDBC driver"
          confluent-hub install debezium/debezium-connector-mysql:latest --no-prompt
          confluent-hub install --no-prompt confluentinc/kafka-connect-jdbc:10.2.0
          echo "Launching Kafka Connect worker"
          /etc/confluent/docker/run


---
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect-service
  namespace: kanban
spec:
  selector:
    app: kafka-connect
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8083

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-connect-ingress
  namespace: kanban
  labels:
    name: kafka-connect-ingress
spec:
  rules:
  - host: connect.rancher.waly.dev.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kafka-connect-service
            port: 
              number: 8083
